--- a/style.css
+++ b/style.css
@@ -1,70 +1,116 @@
-/*Développé par Benstitou Sofiane - libre d'utilisation et de redistribution (même commercial)*/
-/* Font : font-family: 'Open Sans', sans-serif;*/
+/* Font: Open Sans bold 700 : font-family: 'Open Sans', sans-serif;*/
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+}
+
+html, body{
+    height: 100%;
+}
+
 body{
-    background-color: #00a8f3;
     color: white;
+    display: flex;
+    flex-direction: column;
+    background-color: #141215;
     font-family: 'Open Sans', sans-serif;
 }
-/*-------- Header -------*/
+
 header{
-    padding-top: 40px;
-    padding-bottom: 24px;
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    width: 100%;
-    background-color: #141215;
     text-align: center;
+    background-color: #141215;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 header img{
     border-radius: 100%;
+    margin-bottom: 50px;
 }
-/*-----------------------*/
-/*------ Header/Na ------*/
-header nav ul li{
-    list-style-type: none;
-    margin-bottom: 25px;
-}
-header nav ul li a{
-    font-size: 25px;
-    text-decoration: none;
-    background-color: white;
-    color: #141215;
-    border-radius: 30px;
-    padding: 10px;
-}
-/*-----------------------*/
 
-/*------- Arcticle ------*/
-article{
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 700px;
-    width: 100%;
-    background-color: #00a8f3;
-    text-align: center;
-}
-a{
+header a.indexer{
+    color: white;
     text-decoration: none;
+    font-size: 40px;
+}
+
+
+main{
+    text-align: center;
+    background-color: #00a8f3;  
+    padding-bottom: 50px;
+    flex-grow: 1; 
+}
+main *{
+    margin-top: 50px;
+}
+
+
+main a{
+    font-size: 20px;
+    display: inline-block;
     background-color: white;
     color: #141215;
-    border-radius: 30px;
+    text-decoration: none;
     padding: 10px;
+    border-radius: 20px;
+    margin-top: 20px;
 }
-/*-----------------------*/
-/*-------- Footer -------*/
+
 footer{
-    background-color: #141215;
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    width: 100%;
     text-align: center;
+    background-color: #141215;
 }
-/*-----------------------*/
+
+footer p{
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+div.presentation{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+div.presentation div.portrait{
+    margin-left: 150px;
+}
+
+div.portrait{
+    background-color: #1b181c;
+    padding: 30px;
+    border-radius: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+div.portrait img{
+    margin-top: 20px;
+    border-radius: 20px;
+}
+
+div.portrait h1{
+    margin-top: 20px;
+}
+div.presentation article{
+    margin-right: 150px;
+}
+
+div.presentation article p{
+    margin-top: 75px;
+    font-size: 30px;
+    max-width: 550px;
+}
+
+div.contact{
+    margin-top: 190px;
+}
+div.contact a.discord{
+    color: white;
+    background-color: #5865f2;
+}
